fixed background image scroll on mobile

--- a/public/css/nrdpStyle.css
+++ b/public/css/nrdpStyle.css
@@ -10,8 +10,8 @@ html p, html div, html a, html h1, html h2, html h3 {
 body {
 	background-image:url('backgrounds/cyberspace.jpg');
 	background-size: 1920px 1080px;
-    background-repeat: no-repeat;
-    background-attachment: fixed;
+    background-repeat: repeat;
+    background-attachment: scroll;
     background-position: center; 
 }
 
@@ -233,6 +233,11 @@ header, .container {
 }
 
 @media screen and (min-width: 700px) {
+
+	body {
+	    background-attachment: fixed;
+	    background-repeat: no-repeat;
+	}
 
 	.banner {
 		background-size: 1920px auto;
